add: user_service: /api/user/{user-id}/brief endpoint
